css/style.css
/* ... */
#dialogSmall input[type="text"]{
	width:300px;
}

/*edit*/
.editDescr{
	float:left;
	width:160px;
	display:block;
	font-weight:bold;
	line-height:28px;
	height:28px;
}

.edit-left, .edit-right{
	position:relative;
	display:block;
	float:left;
	width:60%;
}

.edit-right{
	width:35%;
	text-align:center;
}
.labelPhoto{
	width:120px;
	display:block;
	float:left;
	padding-top:10px;
	height:110px;
	
}

#noimage{
	border:4px dotted #ccc;
	height:70px;
	border-radius:8px;
	line-height:30px;
	width:100%;
}

#edit_photo_dialog_img { display: block; min-width: 150; min-height: 200; }
#file_upload_form { width: 0; height: 0; }
#file_upload_target, #import_upload_target, #crop_target { display:none; }
#file_upload_start, #import_upload_start { -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; filter:alpha(opacity=0); opacity:0; z-index:1001; width:0; height:0;}

.transparent{ opacity: 0.6; }

#phototools .add,
#phototools .delete,
#phototools .mail, 
#phototools .globe, 
#phototools .upload, 
#phototools .download, 
#phototools .cloud, 
#phototools.share { 
	cursor: pointer; width: 40px; height: 40px; margin: 0;-webkit-background-size: 32px 32px; background-size:32px 32px; float: left; position:relative; opacity: 0.1; }
.add:hover,.delete:hover,.mail:hover, .globe:hover, .upload:hover, .download:hover, .cloud:hover,.share:hover { opacity: 1.0 }

#cropbox { margin: auto; }
#pin_details_photo_wrapper { width: 95%; }
#pin_details_photo_wrapper.wait { opacity: 0.6; filter:alpha(opacity=0.6); z-index:1000; background: url('%webroot%/core/img/loading.gif') no-repeat center center; cursor: wait; }
.pin_details_photo { border-radius: 0.5em; border: thin solid #bbb; margin: 0.3em; background: url('%webroot%/core/img/loading.gif') no-repeat center center; -moz-box-shadow: 0 1px 3px #777; -webkit-box-shadow: 0 1px 3px #777; box-shadow: 0 1px 3px #777; opacity: 1; }
.pin_details_photo:hover { background: #fff; cursor: default; }

#phototools { position:absolute;top:20px; margin: 5px 0px 0px 5px; width:auto; padding:4px; background-color:#fff; list-style-type:none; border-radius: 0.5em; -moz-box-shadow: 0 1px 3px #777; -webkit-box-shadow: 0 1px 3px #777; box-shadow: 0 1px 3px #777; }
#phototools li { display: inline; }
#phototools li a { float:left; cursor:pointer; width:30px; height:30px; opacity: 0.6; }
#phototools li a:hover { opacity: 0.8; }
#pinPhoto{
	
	width:80%;
	display:block;
	min-height:120px;
	
	font-size:18px;
	color:#888;
}


#audios_import_process, 
#audios_import_done{
	display:none;
}
#audios_import_process_message, 
#audios_import_status, 
#audios_import_form_message{
	text-align:center;
}
#audios_import_form_message{font-weight: bold;}
.contacts_import_warning{border-color: #fc3333;}
#audios_import_dialog{
	padding:0;
	margin:0;
}

@media only screen and (max-width: 768px){
	#app-navigation-toggle{
		position:fixed;
		background-color:#fff;
		opacity:1;
		height:40px;
		width:45px;
	}
	#app-navigation-toggle_alternative{
		display: none;
	}

	#app-content{
		background:#fff;
	}
	
	#app-navigation {
    	display: unset;
	}
	.sm2-bar-ui.fixed {
		margin-left:45px;
		 left: 0px;
		
	}
	.sm2-inline-element.sm2-button-element.sm2-shuffle{
		display:none;
	}
	
	#individual-playlist-header span span.header-interpret,
	#individual-playlist-header span span.header-album,
	#individual-playlist-header span span.header-opt,
	#individual-playlist li span.interpret,
	#individual-playlist li span.album-indi,
	#individual-playlist li span.ioc-trash
	{
		display:none;
	}
	#individual-playlist li span.title{
		width:80%;
		
	}
	#individual-playlist li{
		font-family:"Helvetica Neue",verdana;
		font-weight:200;
		font-size:16px;
		height:24px;
		line-height:24px;
	}
	
	#individual-playlist li .actionsSong{
		height:20px;
		line-height:20px;
	}
	#individual-playlist li .actionsSong i.ioc{
		font-size:20px;
		height:20px;
		line-height:20px;
	}
	.songcontainer .albumSelect li a.link-full{
		width:60%;
		
	}
}
/* ... */

